--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
 # node_modules
-/dell-typescript-learn/Crowller/node_modules
-/dell-typescript-learn/notes/Advanced/node_modules
+/dell-typescript-learn/**/node_modules
