reflect-metadata's usage of decorator

--- a/dell-typescript-learn/notes/decorator/package.json
+++ b/dell-typescript-learn/notes/decorator/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "reflect-metadata": "^0.1.13",
     "typescript": "^3.7.5"
   },
   "devDependencies": {
