--- a/dell-typescript-learn/Crowller/package.json
+++ b/dell-typescript-learn/Crowller/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:build": "tsc -w",
-    "dev:start": "nodemon node ./build/index.js",
-    "dev": "tsc && concurrently npm:dev:*"
+    "run:build": "tsc -w",
+    "run:start": "nodemon node ./build/index.js",
+    "dev": "tsc && concurrently npm:run:*"
   },
   "nodemonConfig": {
     "ignore": [
