--- a/dell-typescript-learn/Crowller/package.json
+++ b/dell-typescript-learn/Crowller/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "run:build": "tsc -w",
     "run:start": "nodemon node ./build/index.js",
-    "dev": "tsc && concurrently npm:run:*"
+    "dev": "tsc && concurrently npm:run:*",
+    "controller": "tsc & node build/controller/LoginController.js"
   },
   "nodemonConfig": {
     "ignore": [
@@ -32,6 +33,7 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13"
   }
 }
